--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,6 +4,7 @@
     line-height: 76px;
     margin: 0;
     padding: 0;
+    grid-area: title;
 }
 
 @media screen and (max-width: 768px) {
