--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,3 @@
-@import url(__title-grid-container/place__title-grid-container.css);
-@import url(__image-grid-container/place__image-grid-container.css);
 @import url(__website-grid-container/place__website-grid-container.css);
 @import url(__description-grid-container/place__description-grid-container.css);
 @import url(__image/place__image.css);
@@ -8,45 +6,7 @@
 @import url(__title/place__title.css);
 @import url(__url-heading/place__url-heading.css);
 
-/* .place {
-    display: grid;
-    margin: 0 auto;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 40px;
-    margin-bottom: 80px;
-}
 
-@media screen and (max-width: 1024px) {
-    .place {
-        grid-gap: 32px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .place {
-        grid-gap: 28px;
-        margin-bottom: 72px;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .place {
-        grid-template-columns: auto;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .place {
-        margin-bottom: 49px;
-    }
-} */
-
-/* start experimental grid code area*/
-
-/* MARINA: Thank you for your guidance on making this section a bit more fleshed out. I would really appreciate more explanation on how to properly vertically align the
-   title and website elements if I end up not passing this review, as I want to see the "ideal" way to make the URL line up with the bottom of the title. I couldn't figure out
-   how to do that correctly without using pseudo-class selectors, so I wanted to ask you. 
-   I'm glad I got you as my reviewer again! */
 .place {
     display: grid;
     margin: 0 auto;
@@ -54,6 +14,7 @@
     "title website"
     "image description";
     row-gap: 48px;
+    grid-template-columns: 1fr 1fr;
     column-gap: 32px;
     margin-bottom: 80px; /*spacing the place blocks away from each other*/
 }
@@ -68,12 +29,13 @@
     }    
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) { /*Moved this up a bit in width, want to give tablets a more "cinematic" view*/
     .place {
         grid-template-areas:
         "title"
         "image"
         "description";
+        grid-template-columns: auto;
         row-gap: 32px;
         column-gap: 0;
         margin-bottom: 32px;
